[package]
name = "structlog"
version = "0.1.0"
authors = ["Jonathan Pulfer <pulfer@gmail.com>"]
edition = "2018"
description = "Structured logging based on key/value pairs"
repository = "https://github.com/JonPulfer/structlog"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.94", features = ['derive'] }
serde_json = "1.0.39"